# gatel

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.alpine  LICENSE  Makefile  README.md  README.zh.md  SECURITY.md  _improve.md  _todos.md  docker-compose.yml  gatel.kdl  install.ps1  install.sh  justfile  rustfmt.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/http-servers/: CaddyBench.Dockerfile  GatelBench.Dockerfile  README.md  Runner.Dockerfile  compose.yml  docker-compose.yml  run.ps1  run.py  run.sh
benchmarks/http-servers/configs/: Caddyfile.proxy  Caddyfile.static  ferron-proxy.kdl  ferron-proxy.yaml  ferron-static.kdl  ferron-static.yaml  gatel-proxy.kdl  gatel-static.kdl  nginx-backend.conf  nginx-proxy.conf
benchmarks/http-servers/fixtures/: range-64k.lua
benchmarks/http-servers/fixtures/www/: index.html  payload-4k.txt
crates/core/: Cargo.toml
crates/core/src/: cache_control.rs  crypto.rs  depot.rs  encoding.rs  events.rs  glob.rs  http_date.rs  lib.rs  mime_guess.rs  observability.rs  placeholder.rs  plugin.rs  runtime.rs  runtime_services.rs  salvo_service.rs  sd_notify.rs  storage.rs  ttl_cache.rs  websocket.rs
crates/core/src/admin/: mod.rs
crates/core/src/config/: mod.rs  parse.rs  types.rs
crates/core/src/goals/: file_server.rs  mod.rs  redirect.rs
crates/core/src/hoops/: acme_challenge.rs  auth.rs  buffer.rs  cache.rs  compress.rs  decompress.rs  error_pages.rs  forward_auth.rs  headers.rs  ip_filter.rs  logging.rs  metrics.rs  mod.rs  rate_limit.rs  replace.rs  rewrite.rs  stream_replace.rs  templates.rs
crates/core/src/proxy/: activity.rs  cgi.rs  circuit_breaker.rs  dns_upstream.rs  fastcgi.rs  forward_proxy.rs  health.rs  lb.rs  mod.rs  scgi.rs  srv_upstream.rs  unix_upstream.rs  upstream.rs  websocket.rs
crates/core/src/router/: matcher.rs
crates/core/src/server/: graceful.rs  h3_server.rs  http_server.rs  mod.rs  proxy_protocol.rs
crates/core/src/stream/: mod.rs
crates/core/src/tls/: dns.rs  local_ca.rs  manager.rs  mod.rs  trust_store.rs
crates/gatel/: Cargo.toml
crates/gatel/src/: cli.rs  main.rs  win_service.rs
crates/passwd/: Cargo.toml
crates/passwd/src/: main.rs
crates/precompress/: Cargo.toml
crates/precompress/src/: main.rs
dockertest/: run-all.sh
dockertest/ratelimit/: compose.yml  gatel.kdl  test.sh
dockertest/rproxy/: backend.conf  docker-compose.yml  gatel.kdl  test.sh
dockertest/static/: docker-compose.yml  gatel.kdl  test.sh
dockertest/static/www/: index.html
docs/en/: README.md  advanced-features.md  configuration.md  getting-started.md  middleware.md  reverse-proxy.md  runtime-control-plane.md  tls-and-acme.md
docs/zh/: README.md  advanced-features.md  configuration.md  getting-started.md  middleware.md  reverse-proxy.md  runtime-control-plane.md  tls-and-acme.md
examples/: caching.kdl  dns-upstreams.kdl  http3.kdl  https-acme.kdl  https-manual-certs.kdl  kitchen-sink.kdl  load-balancing.kdl  matchers.kdl  minimal.kdl  mtls.kdl  multi-site.kdl  on-demand-tls.kdl  php-fastcgi.kdl  proxy-protocol.kdl  rate-limiting.kdl  static-site.kdl  stream-proxy.kdl  tls-internal.kdl  websocket.kdl
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_parser.rs  fuzz_duration_parser.rs
packaging/deb/: build.sh  control  gatel.service  postinst  postrm  prerm
packaging/rpm/: build.sh  gatel.service  gatel.spec
smoketest/: smoketest.ps1  smoketest.sh
