[workspace]
members = ["crates/gatel", "crates/core", "crates/passwd", "crates/precompress"]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0"
description = "A high-performance, KDL-configured reverse proxy and web server"
repository = "https://github.com/salvo-rs/gatel"
homepage = "https://github.com/salvo-rs/gatel"
readme = "README.md"

[workspace.dependencies]
gatel-core = { version = "0.1.0", path = "crates/core" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = [
    "tokio",
    "server-auto",
    "client-legacy",
    "http1",
    "http2",
] }
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
tokio-rustls = { version = "0.26", default-features = false, features = [
    "logging",
    "ring",
] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
hyper-rustls = { version = "0.27", default-features = false, features = [
    "ring",
    "http1",
    "http2",
    "logging",
] }
certon = { version = "0.1.3" }
kdl = "6"
glob = "0.3"
arc-swap = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-compression = { version = "0.4", features = [
    "tokio",
    "gzip",
    "zstd",
    "brotli",
    "deflate",
] }
pin-project-lite = "0.2"
futures-util = "0.3"
async-trait = "0.1"
rustls-pemfile = "2"
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
    "query",
] }
h3 = { version = "0.0.8", features = ["tracing"] }
h3-quinn = { version = "0.0.10", features = ["tracing"] }
quinn = { version = "0.11", default-features = false, features = [
    "rustls-ring",
    "runtime-tokio",
] }
anyhow = "1"
bcrypt = "0.19"
flate2 = "1"
brotli = "8"
zstd = "0.13"
rand = "0.10"
dashmap = "6"
regex = "1"
mimalloc = { version = "0.1", default-features = false }
argon2 = "0.5"
scrypt = "0.11"
pbkdf2 = { version = "0.12", features = ["simple"] }
password-hash = "0.6"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["trace"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"
hickory-resolver = { version = "0.25", features = ["tokio"] }
salvo = { version = "0.91", default-features = false, features = [
    "fix-http1-request-uri",
    "logging",
    "serve-static",
    "compression",
    "cors",
    "timeout",
    "request-id",
    "force-https",
    "trailing-slash",
] }
tempfile = "3"
tower-service = "0.3"
windows-service = "0.8"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
