[package]
name = "gatel-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true

[features]
bcrypt = ["dep:bcrypt"]
http3 = ["dep:h3", "dep:h3-quinn", "dep:quinn"]
argon2 = ["dep:argon2"]
scrypt = ["dep:scrypt"]
pbkdf2 = ["dep:pbkdf2"]
runtime-monoio = ["dep:monoio"]

[dependencies]
bcrypt = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }
scrypt = { workspace = true, optional = true }
pbkdf2 = { workspace = true, optional = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
hyper-rustls = { workspace = true }
certon = { workspace = true }
rcgen = { workspace = true }
time = { workspace = true }
dirs = { workspace = true }
kdl = { workspace = true }
glob = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
pin-project-lite = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
async-compression = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
h3 = { workspace = true, optional = true }
h3-quinn = { workspace = true, optional = true }
quinn = { workspace = true, optional = true }
hickory-resolver = { workspace = true }
salvo = { workspace = true }
tower-service = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
monoio = { version = "0.2.4", optional = true }

[target.'cfg(windows)'.dependencies]
schannel = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
